--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -1,11 +1,12 @@
 @import './base.css';
+@import './grid.css';
 
 /* Redéfinir les styles globaux pour les titres */
-h1, h2 {
+h1,.h1, h2,.h2 {
   font-family: var(--brp-font);
 }
 
-h3, h4, h5, h6 {
+h3,.h3, h4.h4, h5, h6 {
   font-family: var(--antarctica-semibold);
 }
 
@@ -16,19 +17,19 @@ body {
   font-size: 1rem;
 }
 
-h1 {
+h1,.h1 {
 font-size: 5.375rem;
 } 
 
-h2 {
+h2,.h2 {
 font-size: 3rem;
 }
 
-h3 {
+h3,.h3 {
 font-size: 2rem;
 }
 
-h4 {
+h4.h4 {
 font-size: 1.5rem;
 }
 
@@ -38,25 +39,25 @@ font-size: 1.5rem;
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 1200px) {
-  h1 {
+  h1,.h1 {
     font-size: 4.8rem;
   }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 992px) {
-  h1 {
+  h1,.h1 {
     font-size: 4rem;
   }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 768px) {
-  h1 {
+  h1,.h1 {
     font-size: 3.1rem;
   }
 }
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  h1 {
+  h1,.h1 {
     font-size: 2.6rem;
   }
 }
@@ -72,4 +73,17 @@ font-size: 1.5rem;
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
 
+}
+
+ul {
+  list-style-type: disc;
+  padding-left: 1rem;
+  margin-bottom: 1rem;
+}
+
+/* Bootstrap override */
+.container {
+  @media(min-width: 1140px) {
+    max-width: 1400px;
+  }
 }
