fix(main.css): correction syntax h4 and .h4

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -10,7 +10,7 @@ h1,.h1, h2,.h2 {
   font-family: var(--brp-font), 'Georgia', serif;
 }
 
-h3,.h3, h4.h4, h5, h6 {
+h3,.h3, h4,.h4, h5, h6 {
   font-family: var(--antarctica-semibold), 'Georgia', serif;
 }
 
@@ -39,7 +39,7 @@ padding-top: 1rem;
 padding-bottom: 0.5rem;
 }
 
-h4.h4 {
+h4,.h4 {
 font-size: 1.5rem;
 }
 
