--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -86,6 +86,9 @@ section {
   h3, .h3 {
     font-size: 1.5rem;
   }
+  h4, .h4 {
+    font-size: 1.25rem;
+  }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 768px) {
@@ -98,6 +101,9 @@ section {
   h3, .h3 {
     font-size: 1.35rem;
   }
+  h4, .h4 {
+    font-size: 1.15rem;
+  }
 }
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -109,6 +115,9 @@ section {
   }
   h3, .h3 {
     font-size: 1.2rem;
+  }
+  h4, .h4 {
+    font-size: 1rem;
   }
 }
 
